--- a/src/app/pages/settings/shift-type-new/shift-type-new.component.css
+++ b/src/app/pages/settings/shift-type-new/shift-type-new.component.css
@@ -14,7 +14,8 @@
 }
 .graceLable {
     width:50%;
-  float:left
+  float:left;
+  padding-left: 5%
 }
 .graceInput {
     width:97%;
